--- a/src/components/DateSelector.module.css
+++ b/src/components/DateSelector.module.css
@@ -2,7 +2,8 @@
     border-radius: 24px;
     background-color: var(--color-secondary-bg);
     display: flex;
-    margin-bottom: 24px;   
+    margin-bottom: 24px;
+    cursor: pointer;   
 }
 
 
